<resources>
    <string name="app_name">Anya</string>
    <string name="textViewMasuk">Masuk</string>
    <string name="email">Email</string>
    <string name="sandi">Sandi</string>
    <string name="textViewNavRegister">Atau</string>
    <string name="textRegister">Buat Akun</string>
    <string name="textHintName">Nama Lengkap</string>
    <string name="tv_konfirmasi_sandi">Konfirmasi Sandi</string>
    <string name="tv_berikutnya">Berikutnya</string>
    <string name="text_selesai">Selesai</string>
    <string name="text_tanggal_lahir">Tanggal Lahir</string>
    <string name="text_tempat_lahir">Tempat Tinggal / Lahir</string>
    <string name="text_jenis_kelamin">Jenis Kelamin</string>

    <string-array name="kelamin_array">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Kamera</string>
    <string name="title_education">Edukasi</string>
    <string name="title_profile">Profile</string>
    <string name="mon_child_status">Belum ada data anak</string>
    <string name="mon_child_warning">Buat data anak terlebih dahulu</string>
    <string name="child_image">Child Image</string>
    <string name="create_data">Buat data</string>
    <string name="mon_mother_status">Belum ada data ibu</string>
    <string name="mon_mother_warning">Buat data ibu terlebih dahulu</string>
    <string name="notification">Notifikasi</string>
    <string name="setting">Pengaturan</string>
    <string name="text_change">Change</string>
    <string name="title_food">Makanan</string>
    <string name="title_stunting">Stunting</string>
    <string name="title_progress">Progress</string>
    <string name="title_detail">Detail</string>
    <string name="title_Nutrition">Nutrisi</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="app_description">Aplikasi monitoring stunting</string>

    <string name="text_tersisa">Tersisa</string>
    <string name="text_tambah_makanan">Tambah makanan</string>
    <string name="text_makanan_terakhir">Makanan Terakhir</string>

    <string name="title_register">Buat Akun</string>
    <string name="title_list_anak">Daftar Anak</string>
    <string name="title_input_anak">Buat Anak</string>
    <string name="title_child_monitoring">Monitoring Anak</string>
    <string name="title_mother_monitoring">Monitoring Ibu</string>
    <string name="title_education_detail">Detail Edukasi</string>
    <string name="title_mother_register">Buat data ibu</string>


    <string name="text_bulan_kehamilan">Bulan Kehamilan</string>
    <string name="text_bulan_kelahiran">Bulan Kelahiran</string>


    <string name="text_stunting">Stunting</string>
    <string name="text_not_stunting">Tidak Stunting</string>
    <string name="text_no_data">No Data</string>
    <string name="text_status">Status</string>
    <string name="text_title_date">Tanggal Periksa</string>
    <string name="text_date">01 Jan 2001</string>
    <string name="text_title_weight">Berat</string>
    <string name="text_weight">1 Kg</string>
    <string name="text_title_height">Tinggi</string>
    <string name="text_height">50 cm</string>
    <string name="text_title_age">Umur</string>
    <string name="text_age">100 hari</string>
    <string name="text_stunting_check">Periksa stunting</string>
    <string name="text_history">Riwayat</string>
    <string name="text_diagnose">Tidak Stunting</string>
    <string name="text_title_diagnose">Diagnosa</string>
    <string name="photo">Gambar</string>
    <string name="education_description">Deskripsi artikel edukasi</string>
    <string name="text_view_all">Lihat Semua</string>

</resources>