<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.anya.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/navigation_camera"
        android:name="com.capstone.anya.ui.camera.CameraActivity"
        android:label="@string/title_camera"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/navigation_education"
        android:name="com.capstone.anya.ui.education.EducationFragment"
        android:label="@string/title_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.anya.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>